Added meta data

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph Meta Tags for Social Media Preview -->
+    <meta property="og:title" content="Adebowale Jasmine - Portfolio">
+    <meta property="og:description" content="Explore my work as a skilled developer and problem-solver.">
+    <meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/A girl.jpg">
+    <meta property="og:url" content="https://profile-zeta-ebon.vercel.app/index.html">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./asset/j-icon.png" type="image/x-icon">
@@ -34,9 +43,9 @@
             inset: 0;
             border-radius: 50%;
             background: radial-gradient(10.08px at bottom right, #0000 94%, currentColor) top left,
-                        radial-gradient(10.08px at bottom left, #0000 94%, currentColor) top right,
-                        radial-gradient(10.08px at top right, #0000 94%, currentColor) bottom left,
-                        radial-gradient(10.08px at top left, #0000 94%, currentColor) bottom right;
+                radial-gradient(10.08px at bottom left, #0000 94%, currentColor) top right,
+                radial-gradient(10.08px at top right, #0000 94%, currentColor) bottom left,
+                radial-gradient(10.08px at top left, #0000 94%, currentColor) bottom right;
             background-size: 22.4px 22.4px;
             background-repeat: no-repeat;
             animation: loader 1.5s infinite cubic-bezier(0.3, 1, 0, 1);
@@ -47,10 +56,12 @@
                 inset: -11.2px;
                 transform: rotate(0deg);
             }
+
             66% {
                 inset: -11.2px;
                 transform: rotate(90deg);
             }
+
             100% {
                 inset: 0;
                 transform: rotate(90deg);
@@ -58,6 +69,7 @@
         }
     </style>
 </head>
+
 <body>
 
     <!-- Loader -->
@@ -66,9 +78,10 @@
     <!-- Redirect Script -->
     <script>
         setTimeout(function () {
-            window.location.href = "portfolio.html"; 
+            window.location.href = "portfolio.html";
         }, 4000);
     </script>
 
 </body>
+
 </html>
