Added meta data

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Open Graph Meta Tags for Social Media Preview -->
+    <!-- Open Graph Meta Tags for Social Media -->
     <meta property="og:title" content="Adebowale Jasmine - Portfolio">
-    <meta property="og:description" content="Explore my work as a skilled developer and problem-solver.">
-    <meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/A girl.jpg">
-    <meta property="og:url" content="https://profile-zeta-ebon.vercel.app/index.html">
+    <meta property="og:description" content="Explore my work as a skilled developer and problem-solver">
+    <meta property="og:image" content="https://profile-zeta-ebon.vercel.app/asset/a-girl.jpg"> 
+    <meta property="og:url" content="https://profile-zeta-ebon.vercel.app/">
     <meta property="og:type" content="website">
+
+    <!-- Twitter Card Meta Tags (for Twitter sharing) -->
     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Adebowale Jasmine - Portfolio">
+    <meta name="twitter:description" content="Explore my work as a skilled developer and problem-solver">
+    <meta name="twitter:image" content="https://profile-zeta-ebon.vercel.app/asset/A girl.jpg"> 
+    <meta name="twitter:url" content="https://profile-zeta-ebon.vercel.app/">
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./asset/j-icon.png" type="image/x-icon">
