--- a/portfolio.html
+++ b/portfolio.html
@@ -109,7 +109,7 @@
 
         <!-- hero-image -->
         <div class="hero-image">
-            <img src="./asset/A girl.jpg" alt="Profile Picture" title="Adebowale Jasmine" />
+            <img src="./asset/a-girl.jpg" alt="Profile Picture" title="Adebowale Jasmine" />
         </div>
     </div>
 
