--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
         <!-- NavBar -->
         <nav>
             <div class="nav-container">
-                <a href="#home" class="logo">My Portfolio</a>
+                <a href="#home" class="logo">Adebowale Jasmine</a>
                 <div class="hamburger" id="hamburger">
                     <i class="fas fa-bars menu-icon"></i>
                     <i class="fas fa-times close-icon hidden"></i>
